prow/cluster/velodrome/velodrome_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: velodrome
  namespace: velodrome
  labels:
    app: velodrome
spec:
  replicas: 2
  selector:
    matchLabels:
      app: velodrome
  template:
    metadata:
      labels:
        app: velodrome
    spec:
      containers:
      - name: nginx-proxy
        image: nginx:1.17
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: nginx
        configMap:
          name: nginx
