prow/cluster/velodrome/velodrome_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: velodrome
  name: velodrome
  namespace: velodrome
spec:
  type: NodePort
  ports:
  - port: 80
---
kind: Endpoints
apiVersion: v1
metadata:
  name: velodrome
  namespace: velodrome
subsets:
- addresses:
  - ip: 130.211.224.127 # public ip for nginx-istio
  ports:
  - port: 80
