prow/cluster/velodrome/velodrome_ing_tmp.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/part-of: velodrome
  name: velodrome-ing-tmp
  namespace: velodrome
  annotations:
    kubernetes.io/ingress.global-static-ip-name: k8s-fw-velodrome-velodrome-ing--c44bd72f22c73d37
    networking.gke.io/managed-certificates: velodrome-istio-io
    kubernetes.io/ingress.class: "gce"
spec:
  backend:
    serviceName: velodrome
    servicePort: 80
